# DNT

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  env.example  pyproject.toml  pytest.ini
docs/: ARCHITECTURE.md
infra/docker/: Dockerfile  docker-compose.yml
infra/envs/: .env.dev
infra/swarm/: dev-swarm.yaml
src/apps/: __init__.py
src/apps/common/controllers/v1/: upload.py
src/apps/common/services/: s3_service.py
src/apps/user/: admin.py  exceptions.py  filters.py  managers.py
src/apps/user/controllers/v1/: auth.py  urls.py  user.py
src/apps/user/dto/: schemas.py
src/apps/user/management/commands/: create_minio_bucket.py
src/apps/user/migrations/: 0001_initial.py  0002_alter_user_profile_image.py  0003_alter_user_id.py
src/apps/user/models/: users.py
src/apps/user/services/: auth_service.py  blacklist_service.py  user_service.py
src/apps/user/tests/: test_blacklist.py  test_services.py  test_views.py
src/apps/user/utils/: password.py
src/config/: api.py  container.py  pagination.py  s3.py  settings.py  types.py  urls.py  utils.py
src/config/auth/: authentication.py
src/config/base/: base_model.py  base_service.py
src/config/conf/: admin.py  cache.py  cors.py  db.py  i18n.py  installed_apps.py  jwt.py  middleware.py  storage_aws.py  templates.py
src/templates/unfold/layouts/: unauthenticated.html
